--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,13 @@
+<h1>Book detail</h1>
+<% @books.each do |book| %>
+  <div>
+    <%= link_to book_path(book.id) do %>
+      <p><%= image_tag book.get_image %></p>
+    <% end %>
+    <p><%= link_to book.title, book_path(book.id) %></p>
+    <p><%= book.body %></p>
+  </div>
+<% end %>
 <div>
   <h1>New Book</h1>
   <%= form_with model: @book do |f| %>
