--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+  <h1>Book detail</h1>
+  <div>
+    <%= link_to book_path(@book.id) do %>
+      <p><%= image_tag @book.get_image %></p>
+    <% end %>
+    <p><%= @book.user.name %></p>
+    <p><%= link_to @book.title, book_path(@book.id) %></p>
+    <p><%= @book.body %></p>
+    <% if @book.user_id == current_user.id %>
+      <%= link_to "Edit", edit_book_path(@book.id) %>
+      <%= link_to "Destroy", book_path(@book.id), method: :delete %>
+    <% end %>
+  </div>
