--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
     <header>
       <% if user_signed_in? %>
         <li>
-          <%= link_to "Home",root_path %>
+          <%= link_to "Home", root_path %>
         </li>
-        <!--<li>-->
-          <!--<%= link_to "Users", destroy_user_session_path, method: :delete %>-->
-        <!--</li>-->
-        <!--<li>-->
-        <!--  <%= link_to "Books", destroy_user_session_path, method: :delete %>-->
-        <!--</li>-->
+        <li>
+          <%= link_to "Users", user_path(current_user.id) %>
+        </li>
+        <li>
+          <%= link_to "Books", books_path %>
+        </li>
         <li>
           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
