--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 <% @books.each do |book| %>
   <div>
     <%= link_to book_path(book.id) do %>
-      <p><%= image_tag book.get_image %></p>
+      <p><%= image_tag book.user.get_profile_image(100,100) %></p>
     <% end %>
     <p><%= link_to book.title, book_path(book.id) %></p>
     <p><%= book.body %></p>
