--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div>
+  <h1>Users</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>image</th><th>name</th><th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user|%>
+      <tr>
+        <td><%= image_tag user.get_profile_image(100,100) %></td><td><%= user.name %></td>
+        <td>
+          <%= link_to "Show", user_path(user.id) %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<div>
+  <h1>User info</h1>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <p>name : <%= @user.name %></p>
+  <p>introduction : <%= @user.introduction %></p>
+  <% if @user.id == current_user.id %>
+    <%= link_to edit_user_path(@user.id) do %>
+        <button>boot</button>
+    <% end %>
+  <% end %>
+</div>
