--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,15 @@
 <h1>Books</h1>
-<% @books.each do |book|%>
-  <div>
-    <p><%= image_tag book.user.get_profile_image(100,100) %></p>
-    <p><%= book.title %></p>
-    <p><%= book.body%></p>
-  </div>
-<% end %>
+  <table>
+    <thead>
+      <tr>
+        <th></th><th>Title</th><th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book|%>
+      <tr>
+        <td><%= image_tag book.user.get_profile_image(100,100) %></td><td><%= book.title %></td><td><%= book.body%></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
