--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,6 +10,12 @@
 <% end %>
 <div>
   <h1>New Book</h1>
+  <% @book.errors.full_messages.each do |message| %>
+    <div class="form-error">
+      <p>error</p>
+      <%= message %>
+    </div>
+  <% end %>
   <%= form_with model: @book do |f| %>
     <h4>Title</h4>
     <%= f.text_field :title %>
