--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
 <div>
   <h1>User info</h1>
+  <% @user.errors.full_messages.each do |message| %>
+    <div class="form-error">
+      <p>error</p>
+      <%= message %>
+    </div>
+  <% end %>
   <%= form_with model: @user do |f| %>
     <h4>Name</h4>
     <%= f.text_field :name %>
