細かなバグ修正必要

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <h1>User info</h1>
   <% @user.errors.full_messages.each do |message| %>
     <div class="form-error">
@@ -7,11 +7,11 @@
     </div>
   <% end %>
   <%= form_with model: @user do |f| %>
-    <h4>Name</h4>
+    <p class="mt-3">Name</p>
     <%= f.text_field :name %>
-    <h4>Image</h4>
+    <p class="mt-3">Image</p>
     <%= f.file_field :profile_image, accept: ".jpg" %>
-    <h4>Introduction</h4>
+    <p class="mt-3">Introduction</p>
     <%= f.text_field :introduction %>
     <%= f.submit 'Update User' %>
   <% end %>
