--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,16 +1,18 @@
-<h1>Editing Book</h1>
-  <% @book.errors.full_messages.each do |message| %>
-    <div class="form-error">
-      <p>error</p>
-      <%= message %>
-    </div>
+<div class="container">
+  <h1>Editing Book</h1>
+    <% @book.errors.full_messages.each do |message| %>
+      <div class="form-error">
+        <p>error</p>
+        <%= message %>
+      </div>
+    <% end %>
+  <%= form_with model: @book do |f| %>
+    <label for="inputTitle" class="d-block">Title</label>
+    <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
+    <label for="inputOpinion" class="d-block">Opinion</label>
+    <%= f.text_field :body, autofocus: true, id:"inputOpinion" ,class:"d-block mb-3" %>  
+    <button class="btn btn-success">Update Book</button>
   <% end %>
-<%= form_with model: @book do |f| %>
-  <label for="inputTitle">Title</label>
-  <%= f.text_field :title, autofocus: true, id:"inputTitle" %>
-  <label for="inputOpinion">Opinion</label>
-  <%= f.text_field :body, autofocus: true, id:"inputOpinion" %>  
-  <%= f.submit "Update Book" %>
-<% end %>
-
-<%= link_to("Show",book_path(@book.id)) %><span> | </span><%= link_to("Back",books_path) %>
+  
+  <%= link_to("Show",book_path(@book.id)) %><span> | </span><%= link_to("Back",books_path) %>
+</div>
