--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,35 @@
-<h1>Book detail</h1>
-<% @books.each do |book| %>
-  <div>
-    <%= link_to book_path(book.id) do %>
-      <p><%= image_tag book.user.get_profile_image(100,100) %></p>
-    <% end %>
-    <p><%= link_to book.title, book_path(book.id) %></p>
-    <p><%= book.body %></p>
-  </div>
-<% end %>
-<div>
-  <h1>New Book</h1>
-  <% @book.errors.full_messages.each do |message| %>
-    <div class="form-error">
-      <p>error</p>
-      <%= message %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', book: @book, user: @user %>
     </div>
-  <% end %>
-  <%= form_with model: @book do |f| %>
-    <h4>Title</h4>
-    <%= f.text_field :title %>
-    <h4>Opinion</h4>
-    <%= f.text_field :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Title</th>
+            <th scope="col">Opinion</th>
+            <th scope="col" colspan=3></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <tr>
+            <td scope="row">
+              <%= link_to book_path(book.id) do %>
+                <%= image_tag book.user.get_profile_image(100,100) %>
+              <% end %>
+            </td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+
+
