--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,13 +1,41 @@
-  <h1>Book detail</h1>
-  <div>
-    <%= link_to book_path(@book.id) do %>
-      <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
-    <% end %>
-    <p><%= @book.user.name %></p>
-    <p><%= link_to @book.title, book_path(@book.id) %></p>
-    <p><%= @book.body %></p>
-    <% if @book.user_id == current_user.id %>
-      <%= link_to "Edit", edit_book_path(@book.id) %>
-      <%= link_to "Destroy", book_path(@book.id), method: :delete %>
-    <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', book: @book, user: @user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h1>Books detail</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Title</th>
+            <th scope="col">Opinion</th>
+            <th scope="col" colspan=3></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <%= link_to book_path(@book.id) do %>
+              <td scope="row"><%= image_tag @book.user.get_profile_image(100,100) %></td>
+            <% end %>
+            <td><%= link_to @book.title, book_path(@book.id) %></td>
+            <td><%= @book.body %></td>
+            <% if @book.user_id == current_user.id %>
+              <td>
+                <%= link_to edit_book_path(@book.id) do %>
+                <button class="btn btn-success">Edit</button>
+                <% end %>
+              </td>
+              <td>
+                <%= link_to edit_book_path(@book.id), method: :deletedo do %>
+                <button class="btn btn-danger">Destroy</button>
+                <% end %>
+              </td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
+</div>
