--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to Bookers!</h1>
+<div class="text-center">
+<h1 class="p-3">Welcome to <i class="fa-solid fa-book"></i>Bookers!</h1>
+</div>
