--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,12 @@
-<h1>welcome to Bookers !!</h1>
-<p>In Bookers,</p>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
+<div class="container col-xl-6">
+  <h1>welcome to <i class="fa-solid fa-book"></i>Bookers !!</h1>
+  <p>In <i class="fa-solid fa-book"></i>Bookers,</p>
+  <p>you can share and exchange your opinions , inpressions , and emotions</p>
+  <p>about various books!</p>
+  <%= link_to new_user_session_path do %>
+  <button type="button" class="btn btn-info btn-sm btn-block mb-3"> Log in </button>
+  <%end %>
+  <%= link_to new_user_registration_path do %>
+  <button type="button" class="btn btn-success btn-sm btn-block topButton"> Log in </button>
+  <%end %>
+</div>
