--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,47 +2,83 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/4ef0a00ebe.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "Home", root_path %>
-        </li>
-        <li>
-          <%= link_to "Users", users_path %>
-        </li>
-        <li>
-          <%= link_to "Books", books_path %>
-        </li>
-        <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "Home",root_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "Sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "Log in", new_user_session_path %>
-        </li>
-      <% end %>
+    <header class="bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <li class="nav-item navbar-brand">
+            <%= link_to "Bookers", root_path ,class: "nav-link text-light" %>
+          </li>
+           <div>
+            <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to user_path(current_user) ,class: "nav-link text-light" do %>
+                <i class="fa-solid fa-house"></i>Home
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to users_path ,class: "nav-link text-light" do %>
+              <i class="fa-solid fa-users"></i>Users
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to books_path ,class: "nav-link text-light" do %>
+              <i class="fa-solid fa-book-open"></i>Books
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to destroy_user_session_path, method: :delete ,class: "nav-link text-light"  do %>
+              <i class="fa-solid fa-right-to-bracket"></i>Log out
+              <%end%>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to root_path ,class: "nav-link text-light" do %>
+                <i class="fa-solid fa-house"></i>Home
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to about_path ,class: "nav-link text-light" do %>
+              <i class="fa-solid fa-link"></i>About
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to new_user_registration_path ,class: "nav-link text-light" do %>
+              <i class="fa-solid fa-user-plus"></i>Sign up
+              <%end%>
+            </li>
+            <li class="nav-item">
+              <%= link_to new_user_session_path ,class: "nav-link text-light" do %>
+              <i class="fa-solid fa-right-to-bracket"></i>Log in
+              <%end%>
+            </li>
+          <% end %>
+          </ul>
+        </div>
+       </div>
+      </nav>
     </header>
-    <% flash.each do |message_type, message| %>
-      <div class="flash-message <%= message_type %>"><%= message %></div>
-    <% end %>
-    <%= yield %>
+    <div>
+      <% flash.each do |message_type, message| %>
+        <div class="flash-message <%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= yield %>
+    </div>
+    <fotter class="container mt-5">
+      <div class="text-center">
+        <p>CopyRight Infratop.inc</p>
+      </div>
+    </fotter>
   </body>
 </html>
+
