--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,29 @@
-<div>
-  <h1>Users</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>image</th><th>name</th><th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user|%>
-      <tr>
-        <td><%= image_tag user.get_profile_image(100,100) %></td><td><%= user.name %></td>
-        <td>
-          <%= link_to "Show", user_path(user.id) %>
-        </td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
-<div>
-  <h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <p>name : <%= @user.name %></p>
-  <p>introduction : <%= @user.introduction %></p>
-  <% if @user.id == current_user.id %>
-    <%= link_to edit_user_path(@user.id) do %>
-        <button>boot</button>
-    <% end %>
-  <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', book: @book, user: @user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h1>Users</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">image</th>
+            <th scope="col">name</th>
+            <th scope="col" colspan=3></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+          <tr>
+            <td scope="row"><%= image_tag user.get_profile_image(100,100) %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "Show", user_path(user.id) %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
