--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,30 @@
-<h1>Books</h1>
-  <table>
-    <thead>
-      <tr>
-        <th></th><th>Title</th><th>Opinion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @books.each do |book| %>
-      <tr>
-        <td><%= image_tag book.user.get_profile_image(100,100) %></td><td><%= book.title %></td><td><%= book.body%></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+
+  <div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', book: @book, user: @user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h1>Books</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Title</th>
+            <th scope="col">Opinion</th>
+            <th scope="col" colspan=3></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+          <tr>
+            <td scope="row"><%= image_tag book.user.get_profile_image(100,100) %></td>
+            <td><%= book.title %></td>
+            <td><%= book.body %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
