--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,9 +16,13 @@
         </thead>
         <tbody>
           <tr>
-            <%= link_to book_path(@book.id) do %>
-              <td scope="row"><%= image_tag @book.user.get_profile_image(100,100) %></td>
-            <% end %>
+            <td scope="row">
+              <%= link_to book_path(@book.id) do %>
+                 <%= image_tag @book.user.get_profile_image(100,100) %>
+                 <br>
+                 <%= @book.user.name %>
+              <% end %>
+            </td>
             <td><%= link_to @book.title, book_path(@book.id) %></td>
             <td><%= @book.body %></td>
             <% if @book.user_id == current_user.id %>
@@ -28,7 +32,7 @@
                 <% end %>
               </td>
               <td>
-                <%= link_to edit_book_path(@book.id), method: :deletedo do %>
+                <%= link_to book_path(@book.id), method: :delete do %>
                 <button class="btn btn-danger">Destroy</button>
                 <% end %>
               </td>
