--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,7 @@
           <% @books.each do |book| %>
           <tr>
             <td scope="row">
-              <%= link_to book_path(book.id) do %>
+              <%= link_to user_path(book.user_id) do %>
                 <%= image_tag book.user.get_profile_image(100,100) %>
               <% end %>
             </td>
