--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'books/list', book: @book, user: @user %>
+      <%= render 'books/list', book: @book_new, user: @book.user %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <h1>Books detail</h1>
+      <h1>Book detail</h1>
       <table class="table">
         <thead>
           <tr>
@@ -17,7 +17,7 @@
         <tbody>
           <tr>
             <td scope="row">
-              <%= link_to book_path(@book.id) do %>
+              <%= link_to user_path(@book.user_id) do %>
                  <%= image_tag @book.user.get_profile_image(100,100) %>
                  <br>
                  <%= @book.user.name %>
