--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,6 +7,6 @@
   <button type="button" class="btn btn-info btn-sm btn-block mb-3"> Log in </button>
   <%end %>
   <%= link_to new_user_registration_path do %>
-  <button type="button" class="btn btn-success btn-sm btn-block topButton"> Log in </button>
+  <button type="button" class="btn btn-success btn-sm btn-block topButton"> Sign up </button>
   <%end %>
 </div>
