--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             </li>
             <li class="nav-item">
               <%= link_to destroy_user_session_path, method: :delete ,class: "nav-link text-light"  do %>
-              <i class="fa-solid fa-right-to-bracket"></i>Log out
+              <i class="fa-solid fa-right-from-bracket"></i>Log out
               <%end%>
             </li>
           <% else %>
