--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,25 +6,46 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col"></th>
-            <th scope="col">Title</th>
-            <th scope="col">Opinion</th>
-            <th scope="col" colspan=3></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @books.each do |book| %>
-          <tr>
-            <td scope="row"><%= image_tag book.user.get_profile_image(100,100) %></td>
-            <td><%= book.title %></td>
-            <td><%= book.body %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <% if @books.present? %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Title</th>
+              <th scope="col">Opinion</th>
+              <th scope="col" colspan=3></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @books.each do |book| %>
+            <tr>
+              <td scope="row">
+                <%= link_to user_path(book.user_id) do %>
+                 <%= image_tag book.user.get_profile_image(100,100) %>
+                 <br>
+                 <%= book.user.name %>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% else %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col"></th>
+              <th scope="col">Title</th>
+              <th scope="col">Opinion</th>
+              <th scope="col" colspan=3></th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      <% end %>
     </div>
   </div>
 </div>
