--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -30,7 +30,7 @@
               <h4>Title</h4>
               <%= f.text_field :title %>
               <h4>Opinion</h4>
-              <%= f.text_field :body %>
+              <%= f.text_area :body %>
               <button class="btn btn-success mt-3">Create Book</button>
             <% end %>
         </div>
