--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
     <p class="mt-3">Image</p>
     <%= f.file_field :profile_image, accept: ".jpg" %>
     <p class="mt-3">Introduction</p>
-    <%= f.text_field :introduction %>
-    <%= f.submit 'Update User' %>
+    <%= f.text_area :introduction %> </br>
+    <button class="btn btn-secondary mt-3">Update User</button>
   <% end %>
 </div>
